--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,76 @@ input[type="checkbox"] {
     justify-content: flex-start;
 }
 
+.rectanglebutton {
+    background: #e4a951;
+    border-radius: 30px;
+    width: 273px;
+    height: 44px;
+    position: absolute;
+    left: calc(20% - 200px);
+    top: 640px;
+}
 
+.belajar-sekarang {
+    color: #ffffff;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    position: absolute;
+    left: calc(20% - 180px);
+    top: 648px;
+    width: 236px;
+    height: 35px;
+}
+.rectangle-5,
+.rectangle-6,
+.rectangle-7,
+.rectangle-8,
+.rectangle-9 {
+    background: #e4a951;
+    border-radius: 10px;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 710px;
+}
+
+.rectangle-5 { left: 98px; }
+.rectangle-6 { left: 175px; }
+.rectangle-7 { left: 252px; }
+.rectangle-8 { left: 329px; }
+.rectangle-9 { left: 406px; }
+
+.formkit-instagram,
+.entypo-social-facebook,
+.akar-icons-linkedin-v-1-fill,
+.icomoon-free-youtube,
+.skill-icons-twitter {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 715px;
+    overflow: visible;
+}
+
+.formkit-instagram { left: 103px; }
+.entypo-social-facebook { left: 180px; }
+.akar-icons-linkedin-v-1-fill { left: 257px; }
+.icomoon-free-youtube { left: 334px; }
+.skill-icons-twitter { left: 411px;     }
+
+.group {
+    height: auto;
+    position: absolute;
+    right: 0%;
+    left: 0%;
+    width: 100%;
+    bottom: 0%;
+    top: 0%;
+    height: 100%;
+    overflow: visible;
+}
 
 .masjid-transparant {
     width: 742px;
