--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,6 @@ input[type="checkbox"] {
     margin: 0 auto;
     text-align: center;
     background-image: url(/assets/masjid.jpg);
-    background-position: 0;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -323,7 +322,7 @@ input[type="checkbox"] {
 
 .container {
     width: 100%;
-    height: 600px;
+    height: auto;
     padding: 40px 40px 40px 40px;
     margin: auto;
     background-color: #131211;
@@ -331,18 +330,18 @@ input[type="checkbox"] {
 }
 
 .header {
-    margin-left: -30px;
+    width: 20%;
+    text-align: center;
 }
 
 .header h2 {
     color: #fff;
-    margin-top: 70px;
-    margin-left: 45px;
+    font-size: 45px;
     font-family: var(--font-judul);
 }
 
 .header img {
-    width: 300px;
+    width: 100%;
 }
 
 .container-card {
@@ -410,7 +409,7 @@ input[type="checkbox"] {
 /* Waktu Sholat */
 .waktusholat {
     width: 100%;
-    padding: 40px 40px 40px 40px;
+    padding: 40px;
     color: #121212;
 }
 
@@ -422,10 +421,13 @@ input[type="checkbox"] {
 .waktu {
     display: flex;
     justify-content: center;
+    gap: 2rem;
+    width: 75%;
+    margin: 0 auto;
 }
 
 .card-waktu {
-    width: 200px;
+    width: 100%;
     margin: 10px;
     background-color: #f0f0f0;
     border: 2px solid #D0B003;
@@ -563,8 +565,21 @@ input[type="checkbox"] {
     }
 
 
+    /* Layanan */
+    .header {
+        width: 40%;
+    }
+
+    .header h2 {
+        font-size: 35px;
+    }
+
     .container .container-card {
         overflow-y: scroll;
+    }
+
+    .container .container-card::-webkit-scrollbar {
+        width: 4px;
     }
 
     .column {
@@ -578,7 +593,8 @@ input[type="checkbox"] {
     }
 
     .waktusholat .waktu {
-        overflow-x: scroll;
+        width: auto;
+        gap: .2rem;
     }
 }
 
@@ -591,10 +607,6 @@ input[type="checkbox"] {
     
     nav {
         padding: 0 6% 0 20%
-    }
-    .header img {
-        width: 200px;
-        margin-left: 15px;
     }
     
     nav {
@@ -639,6 +651,16 @@ input[type="checkbox"] {
         width: 40px;
     }
 
+
+    /* Layanan */
+    .header {
+        width: 100%;
+    }
+
+    .container{
+        padding: 2rem ;
+    }
+
     .card {
         padding: 10px;
         padding-left: 15px;
@@ -651,6 +673,28 @@ input[type="checkbox"] {
     .card .isi {
         margin-top: 5px;
     }
+
+
+    /* Waktu Sholat */
+    .waktusholat {
+        padding: 20px 10px;
+    }
+
+    .waktusholat .judul-waktu {
+        margin-bottom: 10px;
+    }
+
+    .waktusholat .waktu {
+        font-size: 15px;
+        flex-wrap: wrap;
+    }
+
+    .card-waktu {
+        padding: 10px;
+        margin: 1px;
+        width: 100px;
+    }
+
 }
 
 /* @media (max-width: 971px) {
