--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 8px;
 }
 
 ::-webkit-scrollbar-track {
@@ -36,7 +36,7 @@
 
 
 body {
-    height: 2000px;
+    /* height: 2000px; */
     overflow-x: hidden;
 }
 
@@ -46,6 +46,8 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    list-style: none;
 }
 
 nav {
@@ -244,7 +246,7 @@ input[type="checkbox"] {
 }
 
 .rectanglebutton {
-    background: #e4a951;
+    background: var(--emas);
     border-radius: 30px;
     width: 273px;
     height: 44px;
@@ -265,7 +267,7 @@ input[type="checkbox"] {
 }
 
 .rectangle {
-    background-color: #e4a951;
+    background-color: var(--emas);
     width: 100%;
     display: grid;
     place-items: center;
@@ -336,7 +338,7 @@ input[type="checkbox"] {
 
 .header h2 {
     color: #fff;
-    font-size: 45px;
+    font-size: 40px;
     font-family: var(--font-judul);
 }
 
@@ -450,6 +452,80 @@ input[type="checkbox"] {
 
 
 /* kegiatan */
+.container-kegiatan {
+    width: 100%;
+    height: 100%;
+    padding: 40px 40px 100px 40px;
+}
+
+.header-kegiatan {
+    width: 20%;
+    text-align: center;
+}
+
+.header-kegiatan h2 {
+    font-size: 40px;
+    color: var(--hitam);
+    font-family: var(--font-judul);
+}
+
+.header-kegiatan img {
+    width: 100%;
+}
+
+
+.wadah-kegiatan {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.card-kegiatan {
+    width: 100%;
+    border-radius: 10px;
+    background: linear-gradient(180deg, var(--hijau-hitam) 37.08%, #D0B003 100%);
+    color: var(--putih);
+    text-align: center;
+    padding: 20px;
+    border: 4px var(--emas) solid;
+    transition: 5;
+}
+
+.card-kegiatan img {
+    width: 100px;
+    filter: brightness(0) invert(1);
+}
+
+.card-kegiatan h3 {
+    font-size: 20px;
+}
+
+.card-kegiatan .lomba {
+    margin-top: -5px;
+    font-size: 16px;
+    margin-bottom: 10px;
+    color: var(--putih-beda);
+}
+
+.card-kegiatan p {
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.card-kegiatan a {
+    text-decoration: none;
+    color: var(--putih);
+    background-color: var(--btn);
+    padding: 10px 20px;
+    border-radius: 50px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.card-kegiatan a:hover {
+    background-color: var(--btn-hover);
+}
 
 
 
@@ -459,12 +535,498 @@ input[type="checkbox"] {
 
 
 
+/* Rukun Islam */
+.rukun-islam {
+    width: 100%;
+    padding: 40px 40px 40px 40px;
+    color: var(--putih);
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    margin-top: -70px;
+    background-image: url(/assets/masjid-redup.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+.rukun-islam .judul-rukun {
+    margin-top: -20px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.judul-rukun h3 {
+    color: var(--emas);
+}
+
+.rukun {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: -20px;
+}
+
+.card-rukun {
+    width: 200px;
+    padding: 20px;
+    text-align: center;
+}
+
+.card-rukun img {
+    padding: 10px;
+    border-radius: 50px;
+    transform-style: preserve-3d;
+    transition: transform 0.7s;
+}
+
+.card-rukun img:hover {
+    transform: rotateY(180deg);
+    background-color: var(--emas);
+}
+
+
+/* Toko */
+.container-toko {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;;
+    padding: 2rem 0;
+}
+
+.container-toko .header-toko{
+    width: 90%;
+    margin: 0 auto;
+    border-bottom: 5px solid var(--hijau-tua);
+}
+
+.container-toko .header-toko .judul-toko {
+    background-color: var(--hijau-tua);
+    color: var(--putih);
+    width: 20%;
+    text-align: center;
+    padding-top: 1.5rem;
+    text-transform: uppercase;
+}
+
+.container-toko .header-toko .judul-toko img {
+    width: 100%;
+}
+
+.box-toko {
+    /* min-height: 100vh; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slide-container {
+    width: 100%;
+    padding: 40px 30px !important;
+    max-width: 1820px;
+}
+
+.slide-container .slide-content {
+    margin: 0 20px;
+    overflow: hidden;
+}
+
+.slide-container .card {
+    background-color: #fff;
+    border-radius: 10px;
+    margin-top: 1rem;
+    transition: filter .5s ease;
+}
+
+.slide-container .card:hover {
+    filter: drop-shadow(0px 0px 10px #ddd);
+}
+
+.slide-container .image-content,
+.slide-container .card-content {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 14px 20px 14px;
+    gap: 5px;
+}
+
+.slide-container .image-content {
+    row-gap: 5px;
+    width: 100%;
+    position: relative;
+    padding: 5px 0;
+}
+
+.slide-container .card-image {
+    position: relative;
+    background: #fff;
+    padding: 4px;
+}
+
+.slide-container .card-image .card-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border: 4px solid var(--emas);
+    border-radius: 5px;
+}
+
+.slide-container .name {
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.slide-container .rating {
+    color: var(--emas);
+    font-size: 14px;
+}
+
+.slide-container .rating i {
+    font-size: 18px;
+    color: var(--emas);
+    text-indent: -4px;
+}
+
+.slide-container .harga {
+    color: var(--emas);
+}
+
+.slide-container .harga span {
+    margin-right: 6px;
+}
+
+.slide-container .harga .text-error {
+    text-decoration: line-through;
+    color: rgba(255, 0, 0, 0.8);
+}
+
+
+
+
+.slide-container .rating i:last-child {
+    opacity: .3;
+}
+
+.slide-container .harga {
+    font-weight: 600;
+}
+
+.slide-container .swiper-navBtn {
+    color: #f0cc03;
+    transition: color 0.3s;
+}
+
+.slide-container .swiper-navBtn:hover {
+    color: var(--emas);
+}
+
+.slide-container .swiper-navBtn::before,
+.slide-container .swiper-navBtn::after {
+    font-size: 40px;
+}
+
+.slide-container .swiper-button-next {
+    right: 0;
+}
+
+.slide-container .swiper-button-prev {
+    left: 0;
+}
+
+.slide-container .swiper-pagination.bullets {
+    background-color: #f0cc03;
+    opacity: 1;
+}
+
+.slide-container .swiper-pagination-bullet-active {
+    background-color: var(--emas);
+}
+
+
+.container-toko .bawah-toko {
+
+    width: 100%;
+    background-color: var(--hijau-tua);
+    display: flex;
+    /* border-bottom: 8px solid var(--emas); */
+}
+
+.fa-solid {
+    font-size: 55px;
+}
+
+.container-toko .bawah-toko .card-toko {
+    color: var(--emas);
+    width: 100%;
+    display: flex;
+}
+
+.container-toko .bawah-toko .card-toko .content {
+    padding: 2rem 1rem;
+    background-color: var(--hijau-tua);
+    width: 100%;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 8px solid var(--emas);
+    /* box-shadow: 0 8px 0 var(--emas); */
+    transition: transform 1s ease, border-bottom 0.5s ease-in, border-top 1s ease;
+}
+
+.container-toko .bawah-toko .card-toko:hover .content {
+    transform: scale(1.2);
+    border-top: 8px solid var(--emas);
+    border-bottom: 1px;
+    position: relative;
+    bottom: 13px;
+    box-shadow: 61px -53px 0 -53px var(--emas) ;
+    z-index: 1;
+}
+
+.container-toko .bawah-toko .card-toko h3 {
+    color: var(--putih);
+}
+
+.container-toko .bawah-toko .bintang {
+    display: flex;
+    justify-content: center;
+    width: 40%;
+    margin-top: 1rem;
+}
+
+.container-toko .bawah-toko .bintang .fa-star {
+    font-size: 20px;
+}
+
+.container-toko .bawah-toko .card-toko.bintang .fa-star:last-child {
+    opacity: 0.5;
+}
+
+
+/* Donasi */
+
+
+/* kontak */
+
+.container-kontak {
+    width: 100%;    
+    padding: 40px;
+}
+
+.header-kontak {
+    width: 20%;
+    text-align: center;
+}
+
+.header-kontak h2 {
+    font-size: 40px;
+    color: var(--hitam);
+    font-family: var(--font-judul);
+}
+
+.header-kontak img {
+    width: 100%;
+}
+
+.colum-kontak {
+    width: 95%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0 auto;
+}
+
+.sisi h3 {
+    text-align: center;
+    color: var(--emas);
+    font-family: var(--font-judul);
+}
+
+.sisi img {
+    display: flex;
+    width: 300px;
+    margin: auto;
+}
+
+
+
+/* sisi pertama kontak */ 
+
+.container-kontak .sisi-pertama {
+    font-size: 16px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+.container-kontak .sisi-pertama p {
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+
+.container-kontak .sisi-pertama .info i {
+    margin-right: 10px;
+    font-size: 32px;
+    vertical-align: middle; 
+}
+
+
+.container-kontak .sisi-pertama .medsos ul {
+    display: flex;
+    list-style: none;
+    font-size: 50px;
+    gap: 1rem;
+}
+
+.container-kontak .sisi-pertama .medsos li i {
+    background-color: var(--emas);
+    padding: 5px;
+    border-radius: 10px;
+    transition: .4s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-kontak .sisi-pertama .medsos li i:hover {
+    background-color: var(--hijau-tua);
+    color: var(--putih-beda);
+}
 
 
 
 
 
 
+
+
+
+/* sisi kedua kontak */
+
+.colum-kontak .sisi-kedua {
+    padding: 1.5rem 3rem;
+    border-radius: 20px;
+    width: 48%;
+    background-color: var(--hijau-tua);
+} 
+
+.sisi form {
+    display: flex;
+    flex-direction: column;
+}
+
+.sisi form label {
+    color: var(--putih);
+}
+
+.sisi form input {
+    height: 45px;
+    margin-bottom: 20px;
+    padding: 5px 15px;
+    width: 100%;
+    font-size: 14px;
+    outline: none;
+    border: 1px solid #bfbfbf;
+    border-radius: 5px
+}
+
+.sisi form textarea {
+    padding: 5px 15px;
+    width: 100%;
+    font-size: 14px;
+    height: 150px;
+    outline: none;
+    resize: vertical;
+    border: 1px solid #bfbfbf;
+    border-radius: 5px
+}
+
+
+
+.sisi form button {
+    margin: auto;
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 17px;
+    color: var(--hijau-tua);
+    border: 2px var(--putih-beda) solid;
+    cursor: pointer;
+    border-radius: 25px;
+    background: var(--putih-beda);
+    transition: .4s ease;
+}
+
+.sisi form button:hover {
+    background: transparent;
+    color: var(--putih-beda)
+}
+
+button i {
+    margin-right: 10px;
+}
+
+
+.btn-none {
+    display: none;
+}
+
+
+.alert {
+    padding: 15px;
+    width: 100%;
+    margin-bottom: 15px;
+    background-color: #4efc5f;
+    border-radius: 5px;
+    color: #001C30;
+}
+
+.alert-none {
+    display: none;
+}
+
+.alert p {
+    margin-bottom: -1px;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: #001C30;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    margin-top: -5px;
+    cursor: pointer;
+}
+
+.closebtn:hover {
+    color: black;
+}
+
+
+
+
+
+
+/* Footer */
+footer .container-footer {
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 1.5rem;
+    padding: 1.5rem 0;
+    border-top: 1px solid #6c757d2c;
+    color: #858585;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+footer .container-footer a {
+    text-decoration: none;
+    color: var(--emas);
+}
 
 
 
@@ -551,7 +1113,7 @@ input[type="checkbox"] {
     }
 
     .penjelasan-tentang {
-        font-size: 19px;
+        font-size:19px;
     }
 
     .media {
@@ -566,7 +1128,15 @@ input[type="checkbox"] {
 
 
     /* Layanan */
-    .header {
+    .container {
+        padding: 4rem 25px 30px 25px;
+    }
+
+    .container-kegiatan {
+        padding: 10px 30px 100px 30px;
+    }
+    
+    .header, .header-kegiatan, .header-kontak {
         width: 40%;
     }
 
@@ -596,11 +1166,40 @@ input[type="checkbox"] {
         width: auto;
         gap: .2rem;
     }
+
+    .rukun {
+        flex-wrap: nowrap;
+    }
+
+    .wadah-kegiatan {
+        gap: 1rem;
+    }
+
+    .colum-kontak {
+        width: 100%;
+    }
+
+    .colum-kontak .sisi-pertama {
+        width: 45%;
+    }
+
+    .colum-kontak .sisi-kedua {
+        width: 50%;
+        padding: 1.5rem;
+    }
+
+    .container-kontak .sisi-pertama .medsos ul {
+        font-size: 40px;
+    }
 }
 
 
 
 @media (max-width: 768px) and (min-width: 300px) {
+    ::-webkit-scrollbar {
+        width: 4px;
+    }
+
     .container-beranda .beranda {
         top: 350px;
     }
@@ -617,6 +1216,12 @@ input[type="checkbox"] {
     .judul {
         text-align: center;
     }
+
+    .atas-1 {
+        width: 60%;
+        height: 20%;
+    }
+
     .tentang-side {
         width: 95%;
         z-index: 2;
@@ -626,8 +1231,9 @@ input[type="checkbox"] {
 
     .masjid-transparant {
         background-color: transparent;
-        width: 90%;
-        background-position-x: center ;
+        width: 100%;
+        background-position: center ;
+        border-radius: 0;
     }
     
     .masjid-transparant .overlay {
@@ -653,7 +1259,7 @@ input[type="checkbox"] {
 
 
     /* Layanan */
-    .header {
+    .header, .header-kegiatan, .header-kontak {
         width: 100%;
     }
 
@@ -666,7 +1272,7 @@ input[type="checkbox"] {
         padding-left: 15px;
     }
     
-    .card img {
+    .card .container-card  {
         display: none;
     }
     
@@ -678,6 +1284,10 @@ input[type="checkbox"] {
     /* Waktu Sholat */
     .waktusholat {
         padding: 20px 10px;
+    }
+
+    .rukun {
+        flex-wrap: wrap;
     }
 
     .waktusholat .judul-waktu {
@@ -693,6 +1303,35 @@ input[type="checkbox"] {
         padding: 10px;
         margin: 1px;
         width: 100px;
+    }
+
+    .card-rukun {
+        width: 110px;
+        padding: 10px;
+    }
+
+    .wadah-kegiatan {
+        flex-wrap: wrap;
+    }
+
+    .colum-kontak .sisi-pertama {
+        width: 50rem;
+    }
+
+    .colum-kontak .sisi-kedua {
+        margin-top: 2rem;
+        width: 50rem;
+        padding: 1rem 0;
+    }
+
+    .sisi form {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .container-kontak .sisi-pertama .medsos ul {
+        justify-content: center;
+        gap: 0.5rem;
     }
 
 }
@@ -735,12 +1374,64 @@ input[type="checkbox"] {
     }
 } */
 
+/* @media (max-width: 500px) {
+	 .container-kegiatan {
+        padding: 0;
+    }
+
+    .card-kegiatan {
+        margin: 0;
+    }
+
+    .wadah-kegiatan .card-kegiatan img {
+        width: 70px;
+    }
+
+    .wadah-kegiatan .card-kegiatan:nth-child(2) {
+        margin: 10px 0 10px 0;
+    }
+
+    .rukun-islam {
+        margin-top: 0;
+    }
+
+    .card-rukun {
+        width: 100px;
+        padding: 5px;
+    }
+}
 
 
+@media (max-width: 308px) {
+    .container-kegiatan .header-kegiatan img {
+        width: 200px;
+        margin-left: 15px;
+    }
+} */
+
+/* @media (max-width: 308px) {
+    .header-kontak img {
+        width: 200px;
+    }
+
+    .sisi-dua img {
+        width: 200px;
+    }
+}
 
 
+@media (max-width: 971px) {
+    .colum-kontak .sisi {
+        flex: 1 100%;
+        max-width: 100%;
+        margin-bottom: -10px;
+    }
 
+    .sisi h3 {
+        margin-top: 30px;
+    }
 
-
-
-
+    .container-kontak .colum-kontak .sisi-kedua {
+        margin-top: 20px;
+    } 
+} */
