--- a/css/style.css
+++ b/css/style.css
@@ -167,23 +167,46 @@ input[type="checkbox"] {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-.beranda a {
-    cursor: pointer;
+.beranda .animated-button {
+    display: inline-block;
     font-size: 18px;
-    text-decoration: none;
     color: var(--putih);
     background-color: var(--btn);
     padding: 10px 20px;
+    border: none;
     border-radius: 50px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    animation: bounce 2s infinite;
+
 }
 
-.beranda a:hover {
+.beranda .animated-button a {
+    color: var(--putih);
+}
+
+.beranda .animated-button:hover {
     background-color: var(--btn-hover);
 }
 
+@keyframes bounce {
 
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+
+    40% {
+        transform: translateY(-20px);
+    }
+
+    60% {
+        transform: translateY(-10px);
+    }
+}
 
 
 
@@ -201,37 +224,37 @@ input[type="checkbox"] {
 
 /* Tentang */
 
-    .tentang {
-        background: #131211;
-        width: 100%;
-        height: 1000px;
-        position: relative;
-        overflow: hidden;
-    }
+.tentang {
+    background: #131211;
+    width: 100%;
+    height: 1000px;
+    position: relative;
+    overflow: hidden;
+}
 
-    .tentang-side {
-        position: relative;
-        width: 44%;
-        height: 100%;
-        margin-left: 2.5%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: start;
-        }
-    
-    .atas-1 {
-        width: 500px;
-        height: 203px;
-        }
+.tentang-side {
+    position: relative;
+    width: 44%;
+    height: 100%;
+    margin-left: 2.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
 
-        .judul {
-            color: #ffffff;
-            font-family: var(--font-judul);
-            font-size: 45px;
-            font-weight: 400;
-            width: 523px;
-            }
+.atas-1 {
+    width: 500px;
+    height: 203px;
+}
+
+.judul {
+    color: #ffffff;
+    font-family: var(--font-judul);
+    font-size: 45px;
+    font-weight: 400;
+    width: 523px;
+}
 
 .penjelasan-tentang {
     color: #ffffff;
@@ -293,7 +316,7 @@ input[type="checkbox"] {
 .masjid-transparant .overlay {
     width: 100%;
     height: 100%;
-    background: radial-gradient(rgba(19, 18, 17, 0) 25%, rgb(19, 18, 17, 1) 100%), linear-gradient(180deg, rgba(19, 18, 17, 0) 25%, rgb(19, 18, 17, 1 )100%);
+    background: radial-gradient(rgba(19, 18, 17, 0) 25%, rgb(19, 18, 17, 1) 100%), linear-gradient(180deg, rgba(19, 18, 17, 0) 25%, rgb(19, 18, 17, 1)100%);
 }
 
 
@@ -499,7 +522,12 @@ input[type="checkbox"] {
     text-align: center;
     padding: 20px;
     border: 4px var(--emas) solid;
-    transition: 5;
+    transition: 1s;
+}
+
+.card-kegiatan:hover {
+    margin-top: -30px;
+    box-shadow: 1px 1px 10px rgb(14, 38, 48, 0.5);
 }
 
 .card-kegiatan img {
@@ -602,7 +630,7 @@ input[type="checkbox"] {
     padding-top: 4rem;
 }
 
-.container-toko .header-toko{
+.container-toko .header-toko {
     width: 90%;
     margin: 0 auto;
     border-bottom: 5px solid var(--hijau-tua);
@@ -795,7 +823,7 @@ input[type="checkbox"] {
     border-bottom: 1px;
     position: relative;
     bottom: 6px;
-    box-shadow: 55px -45px 0 -45px var(--emas) ;
+    box-shadow: 55px -45px 0 -45px var(--emas);
     z-index: 1;
 }
 
@@ -827,7 +855,7 @@ input[type="checkbox"] {
 /* kontak */
 
 .container-kontak {
-    width: 100%;    
+    width: 100%;
     padding: 40px;
 }
 
@@ -868,7 +896,7 @@ input[type="checkbox"] {
 
 
 
-/* sisi pertama kontak */ 
+/* sisi pertama kontak */
 
 .container-kontak .sisi-pertama {
     font-size: 16px;
@@ -887,7 +915,7 @@ input[type="checkbox"] {
 .container-kontak .sisi-pertama .info i {
     margin-right: 10px;
     font-size: 32px;
-    vertical-align: middle; 
+    vertical-align: middle;
 }
 
 
@@ -928,7 +956,7 @@ input[type="checkbox"] {
     border-radius: 20px;
     width: 48%;
     background-color: var(--hijau-tua);
-} 
+}
 
 .sisi form {
     display: flex;
@@ -1134,7 +1162,7 @@ footer .container-footer a {
     }
 
     .penjelasan-tentang {
-        font-size:19px;
+        font-size: 19px;
     }
 
     .media {
@@ -1156,8 +1184,10 @@ footer .container-footer a {
     .container-kegiatan {
         padding: 10px 30px 100px 30px;
     }
-    
-    .header, .header-kegiatan, .header-kontak {
+
+    .header,
+    .header-kegiatan,
+    .header-kontak {
         width: 40%;
     }
 
@@ -1254,7 +1284,7 @@ footer .container-footer a {
     .container-beranda .beranda {
         top: 350px;
     }
-    
+
     nav {
         padding: 0 5% 0 3%
     }
@@ -1279,13 +1309,13 @@ footer .container-footer a {
     .masjid-transparant {
         background-color: transparent;
         width: 100%;
-        background-position: center ;
+        background-position: center;
         border-radius: 0;
     }
-    
+
     .masjid-transparant .overlay {
-        background: radial-gradient(rgba(19, 18, 17, .5) 25%, rgb(19, 18, 17, 1) 100%), 
-        linear-gradient(180deg, rgba(19, 18, 17, .5) 25%, rgb(19, 18, 17, 1 )100%);
+        background: radial-gradient(rgba(19, 18, 17, .5) 25%, rgb(19, 18, 17, 1) 100%),
+            linear-gradient(180deg, rgba(19, 18, 17, .5) 25%, rgb(19, 18, 17, 1)100%);
     }
 
     .penjelasan-tentang {
@@ -1306,26 +1336,28 @@ footer .container-footer a {
 
 
     /* Layanan */
-    .header, .header-kegiatan, .header-kontak {
+    .header,
+    .header-kegiatan,
+    .header-kontak {
         width: 100%;
     }
 
-    .container{
-        padding: 2rem ;
+    .container {
+        padding: 2rem;
     }
 
     .card {
         padding: 10px;
     }
-    
+
     .container-card .column .card img {
         display: none;
     }
 
-    .card .container-card  {
+    .card .container-card {
         display: none;
     }
-    
+
     .card .isi {
         margin-top: 5px;
     }
@@ -1422,7 +1454,8 @@ footer .container-footer a {
         font-size: 16px;
     }
 
-    .slide-container .swiper-navBtn::before, .slide-container .swiper-navBtn::after {
+    .slide-container .swiper-navBtn::before,
+    .slide-container .swiper-navBtn::after {
         font-size: 2rem;
     }
 
