--- a/css/style.css
+++ b/css/style.css
@@ -603,7 +603,7 @@ input[type="checkbox"] {
 }
 
 .container-toko .header-toko{
-    width: 90%;
+    width: 95%;
     margin: 0 auto;
     border-bottom: 5px solid var(--hijau-tua);
 }
@@ -785,18 +785,17 @@ input[type="checkbox"] {
     align-items: center;
     justify-content: center;
     border-bottom: 8px solid var(--emas);
-    /* box-shadow: 0 8px 0 var(--emas); */
-    transition: transform 1s ease, border-bottom 0.5s ease-in, border-top 1s ease;
+    transition: margin-top 1s ease, border-bottom 0.5s ease-in, border-top 1s ease;
 }
 
 .container-toko .bawah-toko .card-toko:hover .content {
-    transform: scale(1);
     border-top: 8px solid var(--emas);
     border-bottom: 1px;
     position: relative;
     bottom: 6px;
-    box-shadow: 55px -45px 0 -45px var(--emas) ;
+    box-shadow: 62px -52px 0 -52px var(--emas) ;
     z-index: 1;
+    margin-top: -10px;
 }
 
 .container-toko .bawah-toko .card-toko h3 {
@@ -822,6 +821,156 @@ input[type="checkbox"] {
 
 
 /* Donasi */
+.container-donasi {
+    padding: 40px;
+}
+
+.atasdonasi {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* margin-left: -2rem; */
+}
+
+.atasdonasi .judul-donasi {
+    width: 20%;
+    text-align: center;
+}
+
+.atasdonasi .judul-donasi h2 {
+    font-size: 35px;
+    font-family: var(--font-judul);
+}
+
+.atasdonasi .judul-donasi img {
+    width: 100%;
+}
+
+.donate-button {
+    padding: 10px 20px;
+    background-color: #0E2630;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-right: 3rem;
+    font-size: 20px;
+}
+
+.donasi-box {
+    max-width: 95%;
+    height: 300px;
+    padding: 20px;
+    margin: 20px auto;
+    background-color: #0E2630;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    overflow-y: auto;
+}
+
+
+.donation-item {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.donation-item:hover {
+    background-color: #D0B003;
+    border: 2px solid #fff;
+}
+
+.donation-item img {
+    width: 100px;
+    height: 50px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.donation-item img:hover {
+    width: 150px;
+    height: 80px;
+}
+
+.donation-item .donation-content {
+    flex: 1;
+}
+
+.donation-item h3,
+.donation-item p {
+    margin: 0;
+}
+
+.donation-item b:hover {
+    color: #fff;
+}
+
+
+
+
+.news-container {
+    width: 100%;
+    overflow: hidden;
+}
+
+.news-wrapper {
+    width: max-content; 
+    display: flex;
+    overflow-x: auto;
+    animation: marquee 40s linear infinite;
+}
+
+.news-item {
+    flex: 0 0 auto;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    margin-right: 10px;
+    background-color: #0E2630;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    text-align: left;
+}
+
+.news-item img {
+    width: 90px;
+    height: 50px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+.news-item-content {
+    overflow-x: auto;
+}
+
+.news-item h3,
+.news-item p {
+    overflow: hidden;
+    white-space: nowrap;
+    color: #fff;
+    margin: 0;
+}
+
+@keyframes marquee {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+.news-wrapper:hover {
+    animation-play-state: paused; 
+}
 
 
 /* kontak */
@@ -1218,6 +1367,10 @@ footer .container-footer a {
     }
 
     /* Toko */
+    .container-toko .header-toko {
+        width: 90%;
+    }
+
     .container-toko .header-toko .judul-toko {
         width: 30%;
     }
