--- a/css/sign.css
+++ b/css/sign.css
@@ -4,7 +4,7 @@
 
 
 :root {
-    --emas: #D0B003;
+    --emas: #e2c103;
     --hijau-tua: #0E2630;
     --hijau-hitam: #091a22;
     --putih: #ffffff;
@@ -17,7 +17,6 @@
     --font-button: 'Poppins', sans-serif;
 }
 
-
 *,
 *::before,
 *::after {
@@ -25,7 +24,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-
 
 body,
 input {
@@ -48,7 +46,7 @@ main {
   width: 100%;
   max-width: 1020px;
   height: 640px;
-  background-color: #fff;
+  background-color: var(--putih);
   border-radius: 3.3rem;
   box-shadow: 0 60px 40px -30px rgba(0, 0, 0, 0.27);
 }
@@ -179,7 +177,7 @@ label {
   width: 100%;
   height: 43px;
   background-color: var(--btn);
-  color: #fff;
+  color: var(--putih);
   border: none;
   cursor: pointer;
   border-radius: 0.8rem;
@@ -230,7 +228,7 @@ main.sign-up-mode .carousel {
   width: 55%;
   left: 45%;
   top: 0;
-  background-color: #ffe0d2;
+  background-color: rgba(226, 193, 3, 0.7);
   border-radius: 2rem;
   display: grid;
   grid-template-rows: auto 1fr;
