--- a/css/style.css
+++ b/css/style.css
@@ -964,6 +964,7 @@ input[type="checkbox"] {
     box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.7);
     border-radius: 5px;
     text-align: left;
+    cursor: pointer;
 }
 
 .news-item img {
